[package]
name = "btc-rpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.0"
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
futures = "0.3.30"
rust_decimal = "1.35.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
