[package]
name = "btc-rpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.0"
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5.0"
futures = "0.3.30"
rust_decimal = { version = "1.35", features = ["db-postgres"] }
serde = "1.0.202"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"

[[bin]]
# name = "btcdb"
name = "btcdb"         # The name of the target.
path = "src/main.rs"   # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
